updated the fontawesome files and fixed the nav isn't showing issue on mobile

--- a/public/styles/content/nav.scss
+++ b/public/styles/content/nav.scss
@@ -35,6 +35,7 @@ nav{
   }
   .menu {
     display:none;
+    color:#fff;
     @media(max-width:991px) {
       display: block;
     }
